--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -23,14 +23,8 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary">Compatrativos de ventas en
+							<h5 class="text-pr text-primary tncb s6">Compatrativos de ventas en
 								servicios de Streaming</h5>
-							
-							<div class="btn-group" role="group" aria-label="Basic example">
-								<button type="button" class="btn btn-info m-0"
-									data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-									+</button>
-							</div>
 						</div>
 						<div class="card-body p-4">
 							<!-- Chart code -->
@@ -78,7 +72,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary">Resumen de ventas y operaci&oacute;n</h5>
+							<h5 class="text-pr text-primary tncb s6">Resumen de ventas y operaci&oacute;n</h5>
 						</div>
 						<div class="card-body p-4">
 							<div class="row">
@@ -87,11 +81,11 @@
 										class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 										<thead>
 											<tr>
-												<th class="text-uppercase text-dark fs-6 font-weight-bolder ps-2">Streaming</th>
-												<th class="text-uppercase text-dark fs-6 font-weight-bolder ps-2">Venta</th>
-												<th class="text-uppercase text-dark fs-6 font-weight-bolder ps-2">Pendiente</th>
-												<th class="text-uppercase text-dark fs-6 font-weight-bolder ps-2">Canceladas</th>
-												<th class="text-uppercase text-dark fs-6 font-weight-bolder ps-2">Promoci&oacute;n</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Streaming</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Venta</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Pendiente</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Canceladas</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Promoci&oacute;n</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -183,7 +177,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary">Comportamiento en las ventas por Streaming</h5>
+							<h5 class="text-pr text-primary tncb s6">Comportamiento en las ventas por Streaming</h5>
 						</div>
 						<div class="card-body p-4">
 							
@@ -231,63 +225,7 @@
 			</div>
 		</div>
 	</main>
-	<!-- Modal -->
-	<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-		data-bs-keyboard="false" tabindex="-1"
-		aria-labelledby="staticBackdropLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="staticBackdropLabel">Alta</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<div class="row g-2">
-						<div class="col-md">
-							<div class="form-floating">
-								<input type="email" class="form-control" id="floatingInputGrid"
-									placeholder="name@example.com" value="mdo@example.com">
-								<label for="floatingInputGrid">Email address</label>
-							</div>
-						</div>
-						<div class="col-md">
-							<div class="form-floating">
-								<select class="form-select" id="floatingSelectGrid"
-									aria-label="Floating label select example">
-									<option selected>Open this select menu</option>
-									<option value="1">One</option>
-									<option value="2">Two</option>
-									<option value="3">Three</option>
-								</select> <label for="floatingSelectGrid">Works with selects</label>
-							</div>
-						</div>
-					</div>
-					<div class="row g-2 mt-2">
-						<div class="col-md">
-							<div class="form-floating mb-3">
-								<input type="email" class="form-control" id="floatingInput"
-									placeholder="name@example.com"> <label
-									for="floatingInput">Email address</label>
-							</div>
-						</div>
-						<div class="col-md">
-							<div class="form-floating">
-								<input type="password" class="form-control"
-									id="floatingPassword" placeholder="Password"> <label
-									for="floatingPassword">Password</label>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
-						data-bs-dismiss="modal">Cancelar</button>
-					<button type="button" class="btn btn-primary">Aceptar</button>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	<SCRIPT>
 		(function($) {
 			"use strict";
