--- a/src/main/resources/templates/dashboard/visor_soporte.html
+++ b/src/main/resources/templates/dashboard/visor_soporte.html
@@ -18,7 +18,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary">C&aacute;talogo de Etapas</h5>
+							<h5 class="text-pr text-primary tncb s6">C&aacute;talogo de Etapas</h5>
 						</div>
 						<div class="card-body p-4">
 							<div class="table-responsive p-0">
@@ -26,14 +26,14 @@
 									class="table align-items-center justify-content-center mb-0 table-hover table-striped table-bordered">
 									<thead>
 										<tr>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder "></th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Folio</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Validaci&oacute;n</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Gesti&oacute;n</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Acompa&Ntilde;a</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Vinculaci&oacute;n</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder  ps-2">Suma</th>
-											<th class="text-uppercase text-center text-dark fs-6 font-weight-bolder text-center ps-2">Estado</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2"></th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Folio</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Validaci&oacute;n</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Gesti&oacute;n</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Acompa&Ntilde;a</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Vinculaci&oacute;n</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Suma</th>
+											<th class="text-uppercase text-primary text-center tncb s2 ps-2">Estado</th>
 										</tr>
 									</thead>
 									<tbody>
