--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -510,6 +510,75 @@ table tr.collapse {
 }
 /* .................................................................................................................. GENERAL FIN */
 
+/* .................................................................................................................. PAGINADOR INI */
+:root {
+  --primary: #23adad;
+  --greyLight: #23adade1;
+  --greyLight-2: #cbe0dd;
+  --greyDark: #2d4848;
+}
+
+.page {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 3rem;
+	margin: 1rem;
+	border-radius: 0.6rem;
+}
+
+.page__numbers, .page__btn, .page__dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.8rem;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.page__dots {
+  width: 2.6rem;
+  height: 2.6rem;
+  color: var(--greyLight);
+  cursor: initial;
+}
+.page__numbers {
+  width: 2.6rem;
+  height: 2.6rem;
+  border-radius: 0.4rem;
+}
+.page__numbers:hover {
+  color: var(--color-dark);
+  background: var(--color-light);
+  font-weight: bold;
+}
+.page__numbers.active {
+  color: #ffffff;
+  background: var(--color-info);
+  font-weight: 600;
+  border: 1px solid var(--color-primary);
+}
+.page__btn {
+	color: var(--greyLight);
+	background: var(--color-light);
+	padding: 0.6rem !important;
+	border-radius: 0.4rem;
+}
+.page__btn:hover {
+color: #ffffff;
+  background: var(--color-info);
+  border: 1px solid var(--color-primary);
+}
+.page__btn.active {
+  color: #ffffff;
+  background: var(--color-info);
+  font-weight: 600;
+  border: 1px solid var(--color-primary);
+}
+.page__btn.active:hover {
+  color: var(--color-dark);
+}
+/* .................................................................................................................. PAGINADOR INI */
+
 /* .................................................................................................................. VISOR_SOPORTE INI */
 .cont-card-verif-ent{ display: none;}
 
