--- a/src/main/resources/templates/catalogos/errores.html
+++ b/src/main/resources/templates/catalogos/errores.html
@@ -59,6 +59,17 @@
 									</tbody>
 								</table>
 							</div>
+							<div class="cont-paginador">
+								<ul class="page">
+									<li class="page__btn cursor-pointer">
+										<i class="fa-solid fa-chevron-left"></i>
+									</li>
+									<li class="page__numbers active">1</li>
+									<li class="page__btn cursor-pointer">
+										<i class="fa-solid fa-chevron-right"></i>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -79,45 +90,44 @@
 						aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div class="row g-2">
+					<div class="row g-2 mt-2">
 						<div class="col-md">
-							<div class="form-floating">
-								<input type="email" class="form-control" id="floatingInputGrid"
-									placeholder="name@example.com" value="mdo@example.com">
-								<label for="floatingInputGrid">Email address</label>
+							<div class="mb-3">
+								<label for="exampleFormControlInput1" class="form-label tncb s1">Clave</label>
+								<input type="text" class="form-control" id="clave">
 							</div>
 						</div>
 						<div class="col-md">
-							<div class="form-floating">
-								<select class="form-select" id="floatingSelectGrid"
-									aria-label="Floating label select example">
-									<option selected>Open this select menu</option>
-									<option value="1">One</option>
-									<option value="2">Two</option>
-									<option value="3">Three</option>
-								</select> <label for="floatingSelectGrid">Works with selects</label>
+							<div class="mb-3">
+								<label for="exampleFormControlInput1" class="form-label tncb s1">Intentos</label>
+								<input type="text" class="form-control" id="clave">
 							</div>
 						</div>
 					</div>
-					<div class="row g-2 mt-2">
+					<div class="row g-2">
 						<div class="col-md">
-							<div class="form-floating mb-3">
-								<input type="email" class="form-control" id="floatingInput"
-									placeholder="name@example.com"> <label
-									for="floatingInput">Email address</label>
+							<div class="mb-3">
+								<label for="exampleFormControlInput1" class="form-label tncb s1">Persistencia</label>
+								<input type="text" class="form-control" id="clave">
 							</div>
 						</div>
 						<div class="col-md">
-							<div class="form-floating">
-								<input type="password" class="form-control"
-									id="floatingPassword" placeholder="Password"> <label
-									for="floatingPassword">Password</label>
+							<div class="mb-3">
+								<label for="exampleFormControlInput1" class="form-label tncb s1">Plataforma</label>
+								<select class="form-select form-select-lg mb-3" aria-label="Plataforma">
+								  <option selected>--</option>
+								  <option value="1">PRIME VIDEO</option>
+								</select>
 							</div>
 						</div>
+					</div>
+					<div class="mb-3">
+						<label for="exampleFormControlTextarea1" class="form-label tncb s1">Descripci&oacute;n</label>
+						<textarea class="form-control" id="descripcion" rows="3"></textarea>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
+					<button type="button" class="btn btn btn-danger"
 						data-bs-dismiss="modal">Cancelar</button>
 					<button type="button" class="btn btn-primary">Aceptar</button>
 				</div>
