--- a/src/main/resources/templates/catalogos/etapas.html
+++ b/src/main/resources/templates/catalogos/etapas.html
@@ -18,7 +18,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Cat&aacute;logo de Etapa</h5>
+							<h5 class="text-pr text-primary tncb s6">Cat&aacute;logo de Etapas</h5>
 							
 							<div class="btn-group" role="group" aria-label="Basic example">
 								<button type="button" class="btn btn-info m-0"
@@ -53,6 +53,17 @@
 									</tbody>
 								</table>
 							</div>
+							<div class="cont-paginador">
+								<ul class="page">
+									<li class="page__btn cursor-pointer">
+										<i class="fa-solid fa-chevron-left"></i>
+									</li>
+									<li class="page__numbers active">1</li>
+									<li class="page__btn cursor-pointer">
+										<i class="fa-solid fa-chevron-right"></i>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -68,50 +79,24 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="staticBackdropLabel">Alta</h5>
+					<h5 class="modal-title text-pr text-primary tncb s4" id="staticBackdropLabel">Nuevo Registro</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal"
 						aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
 					<div class="row g-2">
-						<div class="col-md">
-							<div class="form-floating">
-								<input type="email" class="form-control" id="floatingInputGrid"
-									placeholder="name@example.com" value="mdo@example.com">
-								<label for="floatingInputGrid">Email address</label>
-							</div>
+						<div class="mb-3">
+							<label for="exampleFormControlInput1" class="form-label tncb s1">Clave</label>
+							<input type="text" class="form-control" id="clave">
 						</div>
-						<div class="col-md">
-							<div class="form-floating">
-								<select class="form-select" id="floatingSelectGrid"
-									aria-label="Floating label select example">
-									<option selected>Open this select menu</option>
-									<option value="1">One</option>
-									<option value="2">Two</option>
-									<option value="3">Three</option>
-								</select> <label for="floatingSelectGrid">Works with selects</label>
-							</div>
-						</div>
-					</div>
-					<div class="row g-2 mt-2">
-						<div class="col-md">
-							<div class="form-floating mb-3">
-								<input type="email" class="form-control" id="floatingInput"
-									placeholder="name@example.com"> <label
-									for="floatingInput">Email address</label>
-							</div>
-						</div>
-						<div class="col-md">
-							<div class="form-floating">
-								<input type="password" class="form-control"
-									id="floatingPassword" placeholder="Password"> <label
-									for="floatingPassword">Password</label>
-							</div>
+						<div class="mb-3">
+							<label for="exampleFormControlTextarea1" class="form-label tncb s1">Descripci&oacute;n</label>
+							<textarea class="form-control" id="descripcion" rows="3"></textarea>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
+					<button type="button" class="btn btn btn-danger"
 						data-bs-dismiss="modal">Cancelar</button>
 					<button type="button" class="btn btn-primary">Aceptar</button>
 				</div>
