--- a/src/main/resources/static/resources/css/argon-dashboard.css
+++ b/src/main/resources/static/resources/css/argon-dashboard.css
@@ -21607,7 +21607,7 @@ fieldset:disabled .btn {
 .form-switch .form-check-input {
   border: 1px solid #e9ecef;
   position: relative;
-  background-color: rgba(33, 37, 41, 0.1);
+  background-color: var(--color-danger);
   height: 1.25em;
 }
 
@@ -21619,6 +21619,7 @@ fieldset:disabled .btn {
   border-radius: 50%;
   position: absolute;
   background-color: #fff;
+  border: solid 1px #ccc;
   transform: translateX(1px);
   box-shadow: 0 0.25rem 0.375rem -0.0625rem rgba(20, 20, 20, 0.12), 0 0.125rem 0.25rem -0.0625rem rgba(20, 20, 20, 0.07);
   top: 1px;
@@ -21629,8 +21630,8 @@ fieldset:disabled .btn {
 }
 
 .form-switch .form-check-input:checked {
-  border-color: rgba(94, 114, 228, 0.95);
-  background-color: rgba(94, 114, 228, 0.95);
+  border-color: var(--color-success);
+  background-color: var(--color-success);
 }
 
 .form-switch .form-check-label {
