#Mod - Se agrega correccion de paginador y switch en catalogos

--- a/src/main/resources/templates/dashboard/visor_soporte.html
+++ b/src/main/resources/templates/dashboard/visor_soporte.html
@@ -18,7 +18,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">C&aacute;talogo de Etapas</h5>
+							<h5 class="text-pr text-primary tncb s6">Visor de Soporte</h5>
 						</div>
 						<div class="card-body p-4">
 							<div class="table-responsive p-0">
