--- a/src/main/resources/templates/catalogos/productos.html
+++ b/src/main/resources/templates/catalogos/productos.html
@@ -38,17 +38,23 @@
 											<th class="text-uppercase text-primary tncb s2 ps-2">Plataforma</th>
 											<th class="text-uppercase text-primary ps-2" width="50px"></th>
 											<th class="text-uppercase text-primary ps-2" width="50px"></th>
+											<th class="text-uppercase text-primary ps-2" width="50px"></th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr th:if="${list.size() == 0}">
-											<td colspan="5" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
+											<td colspan="7" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
 										</tr>
 										<tr th:if="${list.size() > 0}" th:each="o, itr: ${list}">
 											<td><span class="text-xg tnrr s1" th:text="${itr.count}"></span></td>
 											<td><span class="text-xg tnrr s1" th:text="${o.clave}"></span></td>
 											<td><span class="text-xg tnrr s1" th:text="${o.descripcion}"></span></td>
 											<td><span class="text-xg tnrr s1" th:text="${o.plataforma.descripcion}"></span></td>
+											<td align="center">
+												<div class="form-check form-switch">
+													<input class="form-check-input" type="checkbox"
+												role="switch" id="flexSwitchCheckDefault"></div>
+											</td>
 											<td align="center"><img src="./resources/img/edit.svg" width="20px" /></td>
 											<td align="center"><img src="./resources/img/delete.svg" width="20px" /></td>
 										</tr>
@@ -56,15 +62,13 @@
 								</table>
 							</div>
 							<div class="cont-paginador">
-								<ul class="page">
-									<li class="page__btn cursor-pointer">
-										<i class="fa-solid fa-chevron-left"></i>
-									</li>
-									<li class="page__numbers active">1</li>
-									<li class="page__btn cursor-pointer">
-										<i class="fa-solid fa-chevron-right"></i>
-									</li>
-								</ul>
+							<ul class="page">
+							    <li class="page__btn cursor-pointer"><i class="fa-solid fa-chevron-left"></i></li>
+							    <li class="page__btn cursor-pointer"><i class="fa-solid fa-angles-left"></i></i></li>
+							    <li class="page__numbers active"> 1</li>
+							    <li class="page__btn cursor-pointer"><i class="fa-solid fa-angles-right"></i></i></li>
+							    <li class="page__btn cursor-pointer"><i class="fa-solid fa-chevron-right"></i></li>
+							  </ul>
 							</div>
 						</div>
 					</div>
