--- a/src/main/resources/templates/dashboard/salud_sistema.html
+++ b/src/main/resources/templates/dashboard/salud_sistema.html
@@ -18,7 +18,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0">
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
-							<h5 class="text-pr text-primary tncb s6">C&aacute;talogo Configuraci&oacute;n de Mensajes</h5>
+							<h5 class="text-pr text-primary tncb s6">Salud del Sistema</h5>
 							<span class="text-date text-dark"></span>
 						</div>
 						<div class="card-body p-4">
