--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,7 +92,7 @@
 				<div class="container-fluid py-1 px-3 line-bottom-whites">
 					<i class="fa-solid fa-bars me-3 fs-3 icon-nav-menu-burguer" style="cursor: pointer;"></i>
 					<nav aria-label="breadcrumb">
-						<h6 class="font-weight-bolder text-back mb-0 fs-4">M&oacute;dulo de Aprovisionamiento de Plataformas de Streaming</h6>
+						<h6 class="font-weight-bolder text-back mb-0 fs-4">M&oacute;dulo de Aprovisionamiento de Plataformas de Entretenimiento</h6>
 					</nav>
 					<div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4"
 						id="navbar">
