--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -23,8 +23,8 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Compatrativos de ventas en
-								servicios de Streaming</h5>
+							<h5 class="text-pr text-primary tncb s6">Compatrativos de Ventas en
+								Servicios de Entretenimiento</h5>
 						</div>
 						<div class="card-body p-4">
 							<!-- Chart code -->
@@ -72,7 +72,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Resumen de ventas y operaci&oacute;n</h5>
+							<h5 class="text-pr text-primary tncb s6">Resumen de Ventas y Operaci&oacute;n</h5>
 						</div>
 						<div class="card-body p-4">
 							<div class="row">
@@ -81,7 +81,7 @@
 										class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 										<thead>
 											<tr>
-												<th class="text-uppercase text-primary tncb s2 ps-2">Streaming</th>
+												<th class="text-uppercase text-primary tncb s2 ps-2">Plataforma</th>
 												<th class="text-uppercase text-primary tncb s2 ps-2">Venta</th>
 												<th class="text-uppercase text-primary tncb s2 ps-2">Pendiente</th>
 												<th class="text-uppercase text-primary tncb s2 ps-2">Canceladas</th>
@@ -177,7 +177,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Comportamiento en las ventas por Streaming</h5>
+							<h5 class="text-pr text-primary tncb s6">Comportamiento en las Ventas por Entretenimiento</h5>
 						</div>
 						<div class="card-body p-4">
 							
