se agrego scroll en el container

--- a/src/main/resources/templates/dashboard/cont_aprov.html
+++ b/src/main/resources/templates/dashboard/cont_aprov.html
@@ -10,5 +10,9 @@
 <body>
 	<div th:replace="index :: menu"></div>
 	<div th:replace="index :: container"></div>
+	<main class="main-container-wk">
+		<div class="container-fluid padding-none container-static">
+		</div>
+	</main>
 </body>
 </html>
