--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -17,7 +17,7 @@
 	<div th:replace="index :: menu"></div>
 	<div th:replace="index :: container"></div>
 	<main class="main-container-wk">
-		<div class="container-fluid padding-none">
+		<div class="container-fluid padding-none container-static">
 			<div class="row">
 				<div class="col-12">
 					<div class="card mb-4">
