--- a/src/main/resources/templates/dashboard/visor_soporte.html
+++ b/src/main/resources/templates/dashboard/visor_soporte.html
@@ -12,7 +12,7 @@
 	<div th:replace="index :: container"></div>
 
 	<main class="main-container-wk">
-		<div class="container-fluid padding-none">
+		<div class="container-fluid padding-none container-static">
 			<div class="row">
 				<div class="col-xl-12 col-md-12 col-sm-12 mb-xl-0 mb-4 cont-card-cat-etapas">
 					<div class="card mb-4">
