select en ventas

--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -527,6 +527,10 @@ table tr.collapse {
 	position: absolute;
     right: 1rem;
 }
+
+.form-select{
+	font-size: 1.1rem !important;
+}
 /* .................................................................................................................. GENERAL FIN */
 
 /* .................................................................................................................. PAGINADOR INI */
