--- a/src/main/resources/templates/dashboard/ventas.html
+++ b/src/main/resources/templates/dashboard/ventas.html
@@ -142,7 +142,18 @@
 									</table>
 								</div>
 								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
-									<br />
+									<select class="form-select"
+										aria-label="Default select example">
+										<option selected>Plataformas</option>
+										<option value="1">NETFLIX</option>
+										<option value="2">Disney +</option>
+										<option value="3">Star +</option>
+										<option value="3">HBO +</option>
+										<option value="3">Prime</option>
+										<option value="3">Star tv</option>
+										<option value="3">F1</option>
+									</select>
+									<hr/>
 									<h3 class="h5">Selecciona fechas para comparar</h3>
 									<div class="input-group">
 										<div class="w-100">
@@ -191,7 +202,18 @@
 									<div id="controlChartdiv"></div>
 								</div>
 								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
-									<br />
+									<select class="form-select"
+										aria-label="Default select example">
+										<option selected>Plataformas</option>
+										<option value="1">NETFLIX</option>
+										<option value="2">Disney +</option>
+										<option value="3">Star +</option>
+										<option value="3">HBO +</option>
+										<option value="3">Prime</option>
+										<option value="3">Star tv</option>
+										<option value="3">F1</option>
+									</select>
+									<hr/>
 									<h3 class="h5">Selecciona fechas para comparar</h3>
 									<div class="input-group">
 										<div class="w-100">
